k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    app: demo
spec:
  serviceAccountName: read-only-sa
  containers:
  - name: demo
    image: nginx:1.14.2
    ports:
    - containerPort: 80
